--- a/BinaryTreeImplementation/BinaryTreeImplementation.csproj
+++ b/BinaryTreeImplementation/BinaryTreeImplementation.csproj
@@ -43,7 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BinaryTreeNode.cs" />
+    <Compile Include="BTNode.cs" />
+    <Compile Include="BTree.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
